make-a-wish-salesforce/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Angina__c</fullName>
        <description>It will hold the value of angina travel algorithm.</description>
        <label>Angina</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_medical_reason_for_moving_quickly__c</fullName>
        <description>Is there a medical reason why we need to move quickly?</description>
        <inlineHelpText>Is there a medical reason why we need to move quickly?</inlineHelpText>
        <label>Any medical reason for moving quickly?</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Are_Other_Diagnosis_Eligible_For_Wish__c</fullName>
        <description>it will hold information about is there are any other diagnosis for wish eligibility</description>
        <label>Are Other Diagnosis Eligible For Wish?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrhythmia__c</fullName>
        <description>it will hold the value of Arrhythmia Travel Algorithm.</description>
        <label>Arrhythmia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChapterName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It  associate with Chapter.</description>
        <label>Chapter Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <description>This Field hold the name of the state.</description>
        <formula>&apos;Make-A-Wish &apos;+State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Age__c</fullName>
        <description>It would capture the child of the age.</description>
        <label>Child Age</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 2.5</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18 &amp; Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Middle_Initial__c</fullName>
        <description>It will hold the Child Middle name details</description>
        <label>Child Middle Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_will_ultimately_die_prematurely__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a condition for which there is no reasonable hope of cure and from which children or young people will ultimately die prematurely.</description>
        <inlineHelpText>Wish Child has a condition for which there is no reasonable hope of cure and from which children or young people will ultimately die prematurely. (e.g., Duchenne muscular dystrophy or neurodegenerative disease)</inlineHelpText>
        <label>Child will ultimately die prematurely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Childs_Qualifying_Diagnosis__c</fullName>
        <description>This field will hold the Child&apos;s Qualifying Diagnosis of the Wish Kid</description>
        <label>Child&apos;s Qualifying Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chronic_Heart_Failure__c</fullName>
        <description>It will hold the value of Chronic Heart Failure Travel Algorithm value.</description>
        <label>Chronic Heart Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chronic_Hepatitis__c</fullName>
        <description>It will hold the Travel Algorithm additional question values.</description>
        <label>Chronic Hepatitis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>It will hold which type of communication can understand by child</description>
        <label>Communication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Verbal</fullName>
                </value>
                <value>
                    <fullName>Appropriate for chronological age</fullName>
                </value>
                <value>
                    <fullName>Sensorimotor (0-2 year old) stage</fullName>
                </value>
                <value>
                    <fullName>Preoperational (2-7 year old) stage</fullName>
                </value>
                <value>
                    <fullName>Concrete Operational (7-11 year old) stage</fullName>
                </value>
                <value>
                    <fullName>Formal Operational (11+ year old) stage</fullName>
                </value>
                <value>
                    <fullName>Chronological age</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Congenital_Heart_Disease__c</fullName>
        <description>It will hold the value of Travel Algorithm&apos;s Congenital_Heart_Disease value.</description>
        <label>Congenita Heart Disease</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Dup_Check__c</fullName>
        <description>Hidden field for checking contact dup</description>
        <label>Contact Dup Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block Contact Dup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convulsive_Disorders__c</fullName>
        <description>It will hold the value of Conclusive Disorder&apos;s Travel Algorithm.</description>
        <label>Convulsive Disorders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Condition_Label__c</fullName>
        <label>Current Condition Label</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Condition__c</fullName>
        <description>It Store the travel recommendation detail.</description>
        <label>Travel Recommendation</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNQ_Date__c</fullName>
        <description>It Capture the DNQ Date</description>
        <label>DNQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>This field holds the DOB details of the Wish Kid</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debilitation_may_extend_over_many_years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a progressive condition without curative treatment options in which debilitation may extend over many years.</description>
        <inlineHelpText>Wish Child has a progressive condition without curative treatment options in which debilitation may extend over many years. (e.g., neurodegenerative, severe treatment resistant epilepsy, metabolic disease)</inlineHelpText>
        <label>Debilitation may extend over many years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Pending_Days__c</fullName>
        <description>It hold number of days still lead in diagnosis verification status.</description>
        <label>Diagnosis Pending Days</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dup_Check__c</fullName>
        <description>This hidden field used in lead duplicate page.</description>
        <label>Dup Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Block Lead Dup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field holds the Gender information of the Wish Kid</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It hold the group 1 detail of ICD code.</description>
        <label>Group 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_this_child_ever_received_prior_wish__c</fullName>
        <description>Has this child ever received a prior wish from MAW or any other wish granting organization?</description>
        <inlineHelpText>Has this child ever received a prior wish from MAW or any other wish granting organization?</inlineHelpText>
        <label>Has this child ever received prior wish?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heart_Failure__c</fullName>
        <description>It will hold the value of Heart_Failure travel algorithm.</description>
        <label>Heart Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Medical_Professional_Name__c</fullName>
        <formula>Treating_Medical_Professional_First_Name__c  +  Treating_Medical_Professional_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Medical Professional Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Question1__c</fullName>
        <description>This field is used to store the value of question value from PartA form</description>
        <label>Hidden Question1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Treatment_Facility_Treating__c</fullName>
        <description>It holds the information about Hospital/Treatment Facility of the wish kid</description>
        <label>Hospital/Treatment Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Treatment_Facility__c</fullName>
        <description>This field will hold the details of the Hospital/Treatment Facility for the Wish Kid</description>
        <label>Hospital/Treatment Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_Recognized_To_Practice_As_a__c</fullName>
        <description>It will hold which type of practice she/he is going to get</description>
        <label>I am Recognized To Practice As a</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Child Life Specialist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_m_Part_of_The_Treating_HealthCare_Team__c</fullName>
        <description>This field will identify whether he/she is part of the treating health care team or not</description>
        <label>I&apos;m Part of The Treating HealthCare Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Increased_probability_of_premature_death__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has an irreversible but non-progressive condition with severe disability and is experiencing multiple health complications that increase the probability for premature death.</description>
        <inlineHelpText>Wish Child has an irreversible but non-progressive condition with severe disability and is experiencing multiple health complications that increase the probability for premature death. (e.g., anoxic brain injury, severe cerebral palsy)</inlineHelpText>
        <label>Increased probability of premature death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>It holds the Date of Inquriy form submitted.</description>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Chapter_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Chapter Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_We_Need_To_Expedite_The_Process__c</fullName>
        <description>It will hold detail about is there is any medical reason for expedite the process</description>
        <label>Is We Need To Expedite The Process?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_in_a_Comatose_Vegetative_State__c</fullName>
        <description>It will hold whether the child is comatose or vegetative state? or not</description>
        <label>Is in a Comatose/Vegetative State?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <description>It holds the long description of ICD Code.</description>
        <label>Long Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lung_Disease__c</fullName>
        <description>It Hold the Lung Disease Details.</description>
        <label>Lung Disease</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MAW_Name__c</fullName>
        <description>It holds the MAW Name of ICD Code.</description>
        <label>MAW Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_ContactId__c</fullName>
        <description>It is an hidden field. Storing the original Medical Professional Contact Id. So while converting the lead, we can create a relationship under this Record instead of creating dup medical professional contact. we are capturing value for this field on Find Duplicate page.</description>
        <label>Medical Professional ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Email__c</fullName>
        <description>This field will hold the details about the Medical Professional Email</description>
        <label>Medical Professional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_First_Name__c</fullName>
        <description>This field will hold the details of Medical Professional First Name</description>
        <label>Medical Professional First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Last_Name__c</fullName>
        <description>It will display the details of the Medical Professional Last Name.</description>
        <label>Medical Professional Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Phone__c</fullName>
        <description>This field will hold the Medical Professional Phone details</description>
        <label>Medical Professional Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Suffix__c</fullName>
        <description>This field will hold the details of the Medical Professional Suffix</description>
        <label>Medical Professional Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Professional_Title__c</fullName>
        <description>This field will hold the Medical Professional Title</description>
        <label>Medical Professional Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MRS</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Professional_Titles__c</fullName>
        <description>This field will hold the details of the Medical Professional Title</description>
        <label>Medical Professional Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Provider_Category__c</fullName>
        <description>It will hold the value of Medical Provider Category.</description>
        <label>Medical Provider Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Child Life Specialist</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Physician Assistant</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Questions__c</fullName>
        <description>Holds all medical Questions</description>
        <label>Medical Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>This field is used to store middle name</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Used to hold month for Part A Form</description>
        <label>TPNMonth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Verbal__c</fullName>
        <description>This field is indicate the communication is Non-Verbal or Not.</description>
        <formula>IF(INCLUDES(Communication__c, &apos;Non-Verbal&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non - Verbal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>None_of_these_statements_describes_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>None of these statements describe Wish Child</description>
        <inlineHelpText>None of these statements describe Wish Child</inlineHelpText>
        <label>None of these statements describes Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Of_Times_Email_Sent__c</fullName>
        <description>It hold the Number of time email is sent.</description>
        <label># Of Times Email Sent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Referral_Email__c</fullName>
        <description>This Field is store the Office Referral email Address.</description>
        <label>Office Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Medical_Provider_Category__c</fullName>
        <description>It holds the Other Medical Provider Category values</description>
        <label>Other Medical Provider Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Relationship_To_Child__c</fullName>
        <description>It will hold the value of Other Relationship to child.</description>
        <label>Other Relationship To Child</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Dupe_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass the duplicate validation.</description>
        <label>No Duplicate Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCD_ICD__c</fullName>
        <description>Used to hold the input value entered by user is ICD Code or Condition Description</description>
        <label>PCD-ICD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Condition_Description__c</fullName>
        <description>This filed is used to store the condition description from PartA from.</description>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_ICD_Code__c</fullName>
        <description>This field is used to store the ICD code value from PartA form.</description>
        <label>Primary ICD-10 Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_First_Name__c</fullName>
        <description>It hold the First name of wish&apos;s parent.</description>
        <label>Parent First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Name__c</fullName>
        <description>This field will hold the Parent name / Guardian name of the Wish kid</description>
        <label>Parent/Guardian Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Last_Name__c</fullName>
        <description>It hold the last name of Wish&apos;s parent.</description>
        <label>Parent Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_A_Form_Password__c</fullName>
        <description>It hold the Diagnosis Verification Password.</description>
        <label>Diagnosis Verification Form Password</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_A_Received__c</fullName>
        <description>This field will capture the date when the status is changed Part A Sent to Eligibility Review/Qualified</description>
        <label>Diagnosis Verification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_A_Sent__c</fullName>
        <description>This will capture the date when the lead status is changed from Referred to Part A Sent</description>
        <label>Diagnosis Verification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Please_Explain_Deteriorate__c</fullName>
        <description>It holds the explanation for question(Do you expect this child&apos;s condition will significantly deteriorate in the next 3-6 months?)</description>
        <label>Please Explain Condition Deteriorate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_Explain__c</fullName>
        <description>Explanation for the wish</description>
        <label>Please Explain Expedite</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>This Field is Store the preferred Name</description>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Signature__c</fullName>
        <description>It will hold the provider signature</description>
        <label>Provider Signature</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pulmonary_Hypertension__c</fullName>
        <description>It hold the value of Travel Algorithm additional questions.</description>
        <label>Pulmonary Hypertension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Any_medical_reason_for_moving_quickly__c</fullName>
        <description>RUSH</description>
        <label>RE Any medical reason for moving quickly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_City__c</fullName>
        <description>CITY</description>
        <label>RE City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Communication__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Country__c</fullName>
        <description>COUNTRY</description>
        <label>RE Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Created_Date__c</fullName>
        <description>DATE_ADDED</description>
        <label>RE Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_DOB__c</fullName>
        <description>BIRTH_DATE</description>
        <label>RE DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Diagnosis_Verification_Received__c</fullName>
        <description>QUALIFIED</description>
        <label>RE Diagnosis Verification Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email_Opt_Out__c</fullName>
        <description>INACTIVE, DO_NOT_CALL
|NO_EMAIL</description>
        <label>RE Email Opt Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Email__c</fullName>
        <description>NUM</description>
        <label>RE Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Family_s_primary_spoken_language__c</fullName>
        <description>PRIMARY_LANGUAGE</description>
        <label>RE Family&apos;s primary spoken language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Fax__c</fullName>
        <description>NUM</description>
        <label>RE Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_First_Name__c</fullName>
        <description>FIRST_NAME</description>
        <label>RE First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Gender__c</fullName>
        <description>SEX</description>
        <label>RE Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Hospital_Treatment_Facility__c</fullName>
        <description>ORG_NAME</description>
        <label>RE Hospital/Treatment Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_ICD_10_Code__c</fullName>
        <description>ICD_CODE</description>
        <label>RE ICD-10 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Import_Id__c</fullName>
        <description>CONSTITUENT_ID, MAWWISHDATAID, IMPORTID</description>
        <label>RE Import Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Is_We_Need_To_Expedite_The_Process__c</fullName>
        <description>RUSH</description>
        <label>RE Is We Need To Expedite The Process?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Last_Name__c</fullName>
        <description>LAST_NAME</description>
        <label>RE Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Long_Description__c</fullName>
        <description>ICD_CODE_DESCRIPTION</description>
        <label>RE Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_MAW_Name__c</fullName>
        <description>ILLNESS_CATEGORY</description>
        <label>RE MAW Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RE_Medical_Professional_Email__c</fullName>
        <description>NUM</description>
        <label>RE Medical Professional Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>